# document-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: document-processing-service-plan.md
document_agent/: __init__.py  __main__.py  assets.py  config.py  errors.py  logging_config.py  metrics.py  status.py  utils.py
document_agent/api/: app.py  observability.py  routes.py  schemas.py  sse.py  uploads.py
document_agent/batches/: __init__.py  manifest.py
document_agent/cli/: local.py  main.py
document_agent/converters/: __init__.py  assets.py  base.py  detect.py  image.py  markdown.py  office.py  pdf.py  pipeline.py  text.py
document_agent/db/: __init__.py  connection.py  repository.py
document_agent/ocr/: __init__.py  client.py
document_agent/pdf/: __init__.py
document_agent/previews/: __init__.py  generator.py
document_agent/search/: __init__.py  chunking.py  embeddings.py  engine.py  models.py  text.py
document_agent/storage/: __init__.py  minio_store.py
document_agent/worker/: main.py  runner.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: ObservabilityApp.tsx  api.ts  main.tsx  styles.css
migrations/: 001_init.sql
test_data/: test.docx
tests/: test_assets.py  test_auth.py  test_batch_manifest.py  test_converters.py  test_detect.py  test_ocr_client.py  test_retention.py  test_search.py  test_sse.py  test_status.py  test_storage.py  test_uploads.py  test_utils.py
tests/integration/: test_api_worker_integration.py
