[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-agent"
version = "0.1.0"
description = "Containerized document processing service that converts files to AI-readable Markdown."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "psycopg-pool>=3.2,<4.0",
  "minio>=7.2,<8.0",
  "typer>=0.12,<1.0",
  "httpx>=0.27,<1.0",
  "prometheus-client>=0.20,<1.0",
  "python-dotenv>=1.0,<2.0",
  "pillow>=10.4,<11.0",
  "pillow-heif>=0.18,<1.0",
  "pymupdf>=1.24,<2.0",
  "pypdf>=5.2,<6.0",
  "pdfplumber>=0.11,<1.0",
  "pyyaml>=6.0,<7.0",
  "requests>=2.32,<3.0",
  "img2pdf>=0.5,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "ftfy>=6.2,<7.0",
  "pypdfium2>=4.30,<5.0",
  "tqdm>=4.66,<5.0",
  "zstandard>=0.23,<1.0",
  "fastembed>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
document-agent = "document_agent.cli.main:app"

[tool.setuptools.packages.find]
where = [".", "vendor"]
include = ["document_agent*", "improved_ocr_agent*", "ia_phase1*"]

[tool.setuptools.package-data]
document_agent = ["ui_dist/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "vendor"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["vendor"]
